[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "Python implementation of Modern Portfolio Theory (Markowitz)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
